--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "dependencies": {
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
+    "chart.js": "^2.9.3",
+    "echarts": "^4.8.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.22",
+    "@types/echarts": "^4.6.2",
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^3.5.3",
     "file-loader": "^6.0.0",
