--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
   "devDependencies": {
     "@types/chart.js": "^2.9.22",
     "@types/echarts": "^4.6.2",
+    "@types/node": "^14.0.13",
     "awesome-typescript-loader": "^5.2.1",
+    "body-parser": "^1.19.0",
     "css-loader": "^3.5.3",
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
+    "moment": "^2.27.0",
+    "mysql": "^2.18.1",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.8.3",
     "url-loader": "^4.1.0",
