--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^14.0.13",
     "awesome-typescript-loader": "^5.2.1",
     "body-parser": "^1.19.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
@@ -35,6 +36,7 @@
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "webpack-sftp-client": "^1.2.1"
   }
 }
