--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "devDependencies": {
     "@types/chart.js": "^2.9.22",
-    "@types/echarts": "^4.6.2",
     "@types/node": "^14.0.13",
     "awesome-typescript-loader": "^5.2.1",
     "body-parser": "^1.19.0",
@@ -29,6 +28,7 @@
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
+    "jquery": "^3.5.1",
     "moment": "^2.27.0",
     "mysql": "^2.18.1",
     "source-map-loader": "^0.2.4",
